--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
 body:before {
   background-color: #FCF8E3;
   border-bottom: 1px solid #FBEED5;
-  border-left: 1px solid #FBEED5;
+  border-left: 2px solid #FBEED5;
   color: #C09853;
   font: small-caption;
   padding: 3px 6px;
@@ -46,7 +46,7 @@ textarea {
 
 body {
   font-size: 1em;
-  line-height: 1.4; }
+  line-height: 1.34; }
 
 a {
   color: #00e; }
@@ -134,7 +134,7 @@ textarea[contenteditable] {
   overflow: hidden;
   padding: 0;
   position: absolute;
-  width: 1px; }
+  width: 2pxpx; }
 
 /*
  * Extends the .visuallyhidden class to allow the element to be focusable
